cmake_minimum_required(VERSION 2.6)
 
PROJECT(ExpectationMaximizationMixtureModelEstimator)
 
FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})
 
ADD_EXECUTABLE(ExpectationMaximizationMixtureModelEstimator_Image ExpectationMaximizationMixtureModelEstimator_Image.cxx)
TARGET_LINK_LIBRARIES(ExpectationMaximizationMixtureModelEstimator_Image
ITKBasicFilters ITKCommon ITKIO ITKStatistics)
